// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge tests AllBadges snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    All badges:
  </Text>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#222222",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Muli-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#222222",
              "fontFamily": "Muli-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#F2F3F4",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Rounded Badge
      </Text>
      <View
        borderRadius={12}
        size={24}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF8066",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 24,
              "justifyContent": "center",
              "minWidth": 24,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Muli-Bold"
          fontSize={14}
          lineHeight={20}
          style={
            [
              {
                "color": "#222222",
                "fontFamily": "Muli-Bold",
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          9
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#222222",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Muli-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#222222",
              "fontFamily": "Muli-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#F2F3F4",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Small Square Badge
      </Text>
      <View
        borderRadius={4}
        size={18}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF8066",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": 18,
              "justifyContent": "center",
              "minWidth": 18,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#2FBFA7",
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Muli-ExtraBold"
          fontSize={10}
          lineHeight={14}
          style={
            [
              {
                "color": "#222222",
                "fontFamily": "Muli-ExtraBold",
                "fontSize": 10,
                "lineHeight": 14,
              },
              {
                "color": "#FFFFFF",
              },
              {
                "letterSpacing": 1.5,
              },
            ]
          }
        >
          NEW
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#222222",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Muli-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#222222",
              "fontFamily": "Muli-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#F2F3F4",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Regular Square Badge
      </Text>
      <View
        borderRadius={4}
        size={24}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF8066",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": 24,
              "justifyContent": "center",
              "minWidth": 24,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#2FBFA7",
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Muli-Bold"
          fontSize={14}
          lineHeight={20}
          style={
            [
              {
                "color": "#222222",
                "fontFamily": "Muli-Bold",
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          Often chosen
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#222222",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Muli-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#222222",
              "fontFamily": "Muli-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#F2F3F4",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Square Badge With Icon
      </Text>
      <View
        borderRadius={4}
        size={20}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#FF8066",
              "borderRadius": 4,
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "minWidth": 20,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "paddingRight": 4,
              },
            ]
          }
        >
          <test-file-stub
            fill="#FF8066"
            height={16}
            width={16}
          />
        </View>
        <Text
          color="#FF8066"
          fontFamily="Muli-Bold"
          fontSize={12}
          lineHeight={18}
          style={
            [
              {
                "color": "#222222",
                "fontFamily": "Muli-Bold",
                "fontSize": 12,
                "lineHeight": 18,
              },
              {
                "color": "#FF8066",
              },
            ]
          }
        >
          Premium
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Badge tests RegularSquareBadge snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={4}
    size={24}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FF8066",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "minWidth": 24,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#2FBFA7",
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Muli-Bold"
      fontSize={14}
      lineHeight={20}
      style={
        [
          {
            "color": "#222222",
            "fontFamily": "Muli-Bold",
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Often chosen
    </Text>
  </View>
</View>
`;

exports[`Badge tests RoundedBadge snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={12}
    size={24}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FF8066",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "minWidth": 24,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Muli-Bold"
      fontSize={14}
      lineHeight={20}
      style={
        [
          {
            "color": "#222222",
            "fontFamily": "Muli-Bold",
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
</View>
`;

exports[`Badge tests SmallSquareBadge snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={4}
    size={18}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FF8066",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#2FBFA7",
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Muli-ExtraBold"
      fontSize={10}
      lineHeight={14}
      style={
        [
          {
            "color": "#222222",
            "fontFamily": "Muli-ExtraBold",
            "fontSize": 10,
            "lineHeight": 14,
          },
          {
            "color": "#FFFFFF",
          },
          {
            "letterSpacing": 1.5,
          },
        ]
      }
    >
      NEW
    </Text>
  </View>
</View>
`;

exports[`Badge tests SquareBadgeWithIcon snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={4}
    size={20}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FF8066",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 20,
          "justifyContent": "center",
          "minWidth": 20,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "paddingRight": 4,
          },
        ]
      }
    >
      <test-file-stub
        fill="#FF8066"
        height={16}
        width={16}
      />
    </View>
    <Text
      color="#FF8066"
      fontFamily="Muli-Bold"
      fontSize={12}
      lineHeight={18}
      style={
        [
          {
            "color": "#222222",
            "fontFamily": "Muli-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "color": "#FF8066",
          },
        ]
      }
    >
      Premium
    </Text>
  </View>
</View>
`;
